#7 Corrected first task

--- a/ASD2-lab7/ASD2-lab7/ASD2-lab7.csproj
+++ b/ASD2-lab7/ASD2-lab7/ASD2-lab7.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkManager1.cs" />
     <Compile Include="WorkManager.cs" />
   </ItemGroup>
   <ItemGroup>
