--- a/ASD2-lab10/ASD2-lab10/ASD2-lab10.csproj
+++ b/ASD2-lab10/ASD2-lab10/ASD2-lab10.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Graph">
-      <HintPath>..\..\..\..\Graph\Nowe = 22.03.18\Graph.dll</HintPath>
+      <HintPath>..\..\..\..\..\Documents\ASD2\Graph\Graph.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,7 +45,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="TestSet">
-      <HintPath>..\..\..\..\Graph\Nowe = 22.03.18\TestSet.dll</HintPath>
+      <HintPath>..\..\..\..\..\Documents\ASD2\TestSet\TestSet.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
