--- a/ASD2-lab11/ASD2-lab11/ASD2-lab11.csproj
+++ b/ASD2-lab11/ASD2-lab11/ASD2-lab11.csproj
@@ -35,7 +35,7 @@
   <ItemGroup>
     <Reference Include="Graph, Version=7.1.1.0, Culture=neutral, PublicKeyToken=321cc63a7b3f4ab0, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Graph\nowa = 05.10.18\Graph.dll</HintPath>
+      <HintPath>..\..\..\Graph\Graph.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,7 +46,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="TestSet">
-      <HintPath>..\..\..\..\Graph\Nowe = 22.03.18\TestSet.dll</HintPath>
+      <HintPath>..\..\..\Graph\TestSet.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
